enable forest reverb